<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="home_timeline">Home Timeline</string>
    <string name="title_activity_timeline">Tweets</string>
    <string name="author">Author</string>
    <string name="timestamp">time</string>
    <string name="tweet_text">Tweet text</string>
    <string name="handle">handle</string>
    <string name="compose">Compose</string>
    <string name="submit">Tweet</string>
    <string name="compose_hint">Write your tweet</string>
    <string name="handleTemplate">\@%s</string>
    <string name="login_title">Tweet Viewer</string>
    <string name="profile">Profile</string>
    <plurals name="characters_left">
        <item quantity="one">%d character left</item>
        <item quantity="other">%d characters left</item>
    </plurals>
    <string name="title_activity_profile">Profile</string>
    <string name="name">Name</string>
    <string name="tagline">tagline</string>
    <string name="num_followers"># followers</string>
    <string name="num_following">Num following</string>
    <string name="profile_image">profile image</string>
    <string name="follower_format">%d Followers</string>
    <string name="following_format">%d Following</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>

</resources>