<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textStyle="bold"
        android:id="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handle"
        android:id="@+id/tvHandle"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_toEndOf="@+id/tvUserName"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:id="@+id/tvTimestamp"
        android:layout_toRightOf="@+id/tvHandle"
        android:layout_toEndOf="@+id/tvHandle"
        android:gravity="end"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_text"
        android:id="@+id/tvBody"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:autoLink="web"
        android:linksClickable="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvReply"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="95dp"
        android:layout_marginStart="95dp"
        android:drawableStart="@drawable/reply"
        android:drawableLeft="@drawable/reply"
        android:drawablePadding="5dp"
        android:textColor="@color/light_gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRetweets"
        android:layout_below="@+id/tvBody"
        android:layout_toRightOf="@+id/tvReply"
        android:layout_toEndOf="@+id/tvReply"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:drawableStart="@drawable/retweet"
        android:drawableLeft="@drawable/retweet"
        android:drawablePadding="5dp"
        android:textColor="@color/light_gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLikes"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/heart"
        android:drawableLeft="@drawable/heart"
        android:drawablePadding="5dp"
        android:textColor="@color/light_gray"
        />

</RelativeLayout>